PROJECT( config )
SET( PREFIX ${ROOT_PATH}/src/config )
FILE( GLOB SRC ${PREFIX}/*.cpp )
FILE( GLOB HDR ${PREFIX}/*.h )
SET( SRCS ${SRC} )
SET( HEADERS ${HDR} )
include_directories( ${GLOBAL_INCLUDE_DIRS} )
link_directories( ${DEPENDENCY_LIBS}  )
add_library( ${PROJECT_NAME} ${SRCS} )
target_link_libraries( ${PROJECT_NAME} ${LIBXML2_LIBRARIES} )
